<resources>
    <string name="app_name">CRMDroid</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserId</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_filter">Filter</string>
    <string name="text_name">Name</string>
    <string name="text_Address">Address</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="sample_large_text">12, Rahuman Street\n NGO Colony,\n Choolaimedu\nChennai\nTamilNadu</string>
    <string name="text_play_time">HH:MM</string>
    <string name="text_status">Status</string>
    <string name="text_assigned_to">Assigned To</string>
    <string name="text_comments">Comments</string>
    <string name="text_submit">Submit</string>
</resources>
